--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,33 +7,54 @@ services:
       POSTGRES_DB: deliverygo
     ports:
       - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./migrations:/docker-entrypoint-initdb.d
+
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: kafka
     ports:
       - "9092:9092"
     environment:
-
       KAFKA_PROCESS_ROLES: "broker,controller"
       KAFKA_NODE_ID: 1
 
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
 
-      # Listeners
       KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
 
       CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
-      KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
+      KAFKA_LOG_DIRS: "/var/lib/kafka/data"
+
       KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
 
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+
+    volumes:
+      - kafka_data:/var/lib/kafka/data
   
   redis:
     image: redis:7
     ports:
       - "6380:6379"
+  
+  osrm:
+    image: osrm/osrm-backend
+    container_name: osrm
+    command: 
+      osrm-routed --algorithm mld /data/india-west.osrm
+    volumes:
+      - ./data:/data
+    ports:
+      - "5000:5000"
+    restart: unless-stopped
+  
+volumes:
+  postgres_data:
+  kafka_data:
